tests/ui/unrelated_panic.stderr
error: proc macro panicked
 --> tests/ui/unrelated_panic.rs:4:1
  |
4 | unrelated_panic!();
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: unrelated panic test
